--- a/vessel/css/grayscale.css
+++ b/vessel/css/grayscale.css
@@ -30,6 +30,13 @@ p {
   margin: 0 0 25px;
   font-size: 18px;
   line-height: 1.5;
+	text-align: justify;
+}
+li {
+	margin: 0 0 25px;
+  font-size: 18px;
+  line-height: 1.5;
+	text-align: justify;
 }
 @media (min-width: 768px) {
   p {
@@ -37,18 +44,21 @@ p {
     font-size: 20px;
     line-height: 1.6;
   }
+	li {
+		font-size: 20px;
+		line-height: 1.6;
+	}
 }
 a {
-  color: #42DCA3;
+  color: rgb(38, 125, 183);
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-a:hover,
-a:focus {
-  text-decoration: none;
-  color: #1d9b6c;
+a:hover {
+	color: orange;
 }
+
 .light {
   font-weight: 400;
 }
@@ -61,6 +71,15 @@ a:focus {
 		height: 100px;
 		padding: 0px;
 	}
+}
+#page-end p{
+	text-align: center;
+	padding-top: 30px;
+}
+
+#page-end{
+	background-color: rgba(38, 125, 183, 0.59);
+	height: 100px;
 }
 .navbar-custom {
   margin-bottom: 0;
@@ -83,6 +102,11 @@ a:focus {
 }
 .navbar-custom .navbar-brand {
   font-weight: 700;
+}
+.navbar-custom li{
+	line-height: 1;
+	font-size: 15px;
+	margin: 0;
 }
 .navbar-custom .navbar-brand:focus {
   outline: none;
@@ -109,10 +133,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom .nav li.active a {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-.navbar-custom .nav li.active a:hover {
-  color: white;
+  background-color: rgba(38, 125, 183, 0.34);
 }
 .navbar-custom.top-nav-collapse #vessel-logo {
 		height: 50px;
@@ -144,7 +165,8 @@ a:focus {
   padding: 100px 0;
   text-align: left;
   color: white;
-  background: url(../img/phone.jpg) no-repeat bottom center scroll;
+	text-shadow: 1px 1px black;
+  background: url(../img/picture3.png) no-repeat bottom center scroll;
   background-color: #800045;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -252,7 +274,7 @@ a:focus {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/school.jpg) no-repeat center center scroll;
+  background: url(../img/picture5.png) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
