--- a/vessel/css/grayscale.css
+++ b/vessel/css/grayscale.css
@@ -166,8 +166,8 @@ a:hover {
   text-align: left;
   color: white;
 	text-shadow: 1px 1px black;
-  background: url(../img/picture3.png) no-repeat bottom center scroll;
-  background-color: #800045;
+  background: url(img/picture3.png) no-repeat bottom center scroll;
+  background-color: rgb(38, 125, 183);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -274,8 +274,8 @@ a:hover {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/picture5.png) no-repeat center center scroll;
-  background-color: black;
+  background: url(img/picture5.png) no-repeat center center scroll;
+  background-color: rgb(38, 125, 183);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
