fixed pictures for sure!

--- a/vessel/css/grayscale.css
+++ b/vessel/css/grayscale.css
@@ -274,7 +274,7 @@ a:hover {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url("../img/picture5.png") no-repeat center center scroll;
+  background: url("../img/Picture5.png") no-repeat center center scroll;
   background-color: rgb(38, 125, 183);
   -webkit-background-size: cover;
   -moz-background-size: cover;
