--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
  */
 
 @font-face {
-    font-family: quadon;
+    font-family: Palatino;
     src: url("../fonts/Quadon/Quadon.otf");
 }
 
@@ -15,7 +15,7 @@ body
 {
     width: 100%;
     height: 100%;
-    font-family: quadon;
+    font-family: Palatino;
     color: black;
     background-color: #ffffff;
 }
@@ -34,10 +34,10 @@ h5,
 h6
 {
     margin: 0 0 35px;
-    font-family: quadon;
+    font-family: Palatino;
     font-weight: 700;
     letter-spacing: 1px;
-    color: #263566;;
+    color: #263566;
 }
 
 p
@@ -72,7 +72,17 @@ a:focus
     text-decoration: none;
     color: #11505d;
 }
-
+#profile-pic {
+	height: 150px;
+	border-style:solid;
+	border-width: 1px;
+	border-color: #263566;
+	border-radius:2px;
+}
+.about-links {
+	text-align: center;
+	padding-top: 10px;
+}
 .light
 {
     font-weight: 400;
@@ -83,7 +93,7 @@ a:focus
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    font-family: quadon;
+    font-family: Palatino;
 }
 
 .navbar-custom .navbar-brand {
